// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Billing addDedicatedIps dispatches with correct data for "normal" account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "ip_pool": "abcd",
        "quantity": 1,
      },
      "method": "POST",
      "url": "/v1/account/add-ons/dedicated_ips",
    },
    "type": "ADD_DEDICATED_IPS",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/v1/sending-ips",
    },
    "type": "LIST_SENDING_IPS",
  },
]
`;

exports[`Action Creator: Billing addDedicatedIps dispatches with correct data for aws account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "ip_pool": "abcd",
        "quantity": 1,
      },
      "method": "POST",
      "url": "/v1/account/aws-marketplace/add-ons/dedicated_ips",
    },
    "type": "ADD_DEDICATED_IPS",
  },
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/v1/sending-ips",
    },
    "type": "LIST_SENDING_IPS",
  },
]
`;

exports[`Action Creator: Billing collectPayments dispatches a collection action 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "POST",
      "onSuccess": [MockFunction],
      "url": "/v1/account/billing/collect",
    },
    "type": "COLLECT_PAYMENTS",
  },
]
`;

exports[`Action Creator: Billing promo code should dispatch a consumption of a promo code 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "POST",
      "params": Object {
        "billing_id": "test-bill-id",
      },
      "promoCode": "test-code",
      "url": "v1/account/subscription/promo-codes/test-code",
    },
    "type": "CONSUME_PROMO_CODE",
  },
]
`;

exports[`Action Creator: Billing promo code should dispatch a verification of a promo code 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "params": Object {
        "billing_id": "test-bill-id",
      },
      "promoCode": "test-code",
      "url": "v1/account/subscription/promo-codes/test-code",
    },
    "type": "VERIFY_PROMO_CODE",
  },
]
`;

exports[`Action Creator: Billing should dispatch a cors action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "cors-data",
      },
      "method": "POST",
      "params": Object {
        "context": "some-context",
      },
      "url": "/v1/account/cors-data",
      "word": "up",
    },
    "type": "CORS_SOME_CONTEXT",
  },
]
`;

exports[`Action Creator: Billing should dispatch a create zuora account action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "test-zuora-data",
      },
      "headers": Object {
        "signature": "some-test-signature",
        "token": "SOME$%TEST#*TOKEN",
      },
      "method": "POST",
      "url": "/accounts",
    },
    "type": "ZUORA_CREATE",
  },
]
`;

exports[`Action Creator: Billing should dispatch an update credit card action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "some": "credit-card-data",
      },
      "headers": Object {
        "signature": "some-test-signature",
        "token": "SOME$%TEST#*TOKEN",
      },
      "method": "POST",
      "url": "/payment-methods/credit-cards",
    },
    "type": "ZUORA_UPDATE_CC",
  },
]
`;

exports[`Action Creator: Billing sync subscription should dispatch a subscription sync action with meta data param 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/v1/account/subscription/check",
      "word": "test",
    },
    "type": "SYNC_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing sync subscription should dispatch a subscription sync action with no params 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "POST",
      "url": "/v1/account/subscription/check",
    },
    "type": "SYNC_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing updateSubscription should dispatch an update subscription action and fetch account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-code",
        "promo_code": undefined,
      },
      "method": "PUT",
      "onSuccess": [Function],
      "url": "/v1/account/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing updateSubscription should dispatch an update subscription action for aws marketplace account 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-code",
        "promo_code": undefined,
      },
      "method": "PUT",
      "onSuccess": [Function],
      "url": "/v1/account/aws-marketplace/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
]
`;

exports[`Action Creator: Billing updateSubscription should dispatch an update subscription action with provided onSuccess action 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "code": "test-code",
        "promo_code": undefined,
      },
      "method": "PUT",
      "onSuccess": [MockFunction],
      "url": "/v1/account/subscription",
    },
    "type": "UPDATE_SUBSCRIPTION",
  },
]
`;
